kubernetes-uk/deployment-app.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ghost-uk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ghost-uk
    spec:
      containers:
      - name: ghost-uk
        image: spareroom/ghost-blog-uk:49
        ports:
        - containerPort: 2368
        imagePullPolicy: Always
        volumeMounts:
          - name: cloud-storage-credentials
            mountPath: /secrets/cloudstorage
            readOnly: true
      - image: gcr.io/cloudsql-docker/gce-proxy:1.09
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                    "-instances=spareroom-blogs:europe-west2:ghost=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      imagePullSecrets:
        - name: spareroomdockercredentials
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName:
                spareroomuksql
        - name: cloud-storage-credentials
          secret:
            secretName:
                spareroomukassets
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
