kubernetes-uk/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost-uk
  labels:
    app: ghost-uk
spec:
  ports:
  - port: 80
    targetPort: 2368
    protocol: TCP
  type: NodePort
  selector:
    app: ghost-uk
