kubernetes-uk/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-uk-ingress
spec:
  tls:
    - secretName: spareroomcouktls
  backend:
    serviceName: ghost-uk
    servicePort: 80
